# gaia-rust

./: .gitignore  Cargo.toml
migrations/: 20241220124638_create_table_groups.up.sql  20241220133406_create_table_users.up.sql  20241220221437_create_table_users_groups.down.sql  20241220221437_create_table_users_groups.up.sql
src/: main.rs
src/controller/: groups.rs  mod.rs  users.rs  users_groups.rs
src/model/: group.rs  mod.rs  user.rs  user_group.rs
src/repository/: group_repository.rs  mod.rs  user_group_repository.rs  user_repository.rs
