[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
rust-argon2 = "2.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "derive", "json", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
